# simple_gtf

./: README.md  pyproject.toml
src/simple_gtf/: __init__.py  read_gtf.py
tests/: test_read_gtf.py
tests/testresources/: Mus_musculus.expected.parquet
